--- a/02-project-QR-Code-Generator/css/style.css
+++ b/02-project-QR-Code-Generator/css/style.css
@@ -17,21 +17,22 @@ body {
 }
 
 main {
-  width: 400px;
-  height: auto;
-  padding: 30px;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: var(--space);
-  border-radius: 14px;
+    width: 90%; 
+    max-width: 25rem; 
+    height: auto;
+    padding: 20px; 
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: var(--space);
+    border-radius: 14px;
 }
 main > h1 {
   font-weight: 600;
   font-size: 1.5rem;
-  margin-bottom: 2cqw;
+  margin-bottom: 10px;
   color: var(--grey);
 }
 
@@ -99,4 +100,6 @@ input.error {
   }
 }
 
+@media screen and (max-width: 760px) {
 
+}
