--- a/02-project-QR-Code-Generator/css/style.css
+++ b/02-project-QR-Code-Generator/css/style.css
@@ -13,6 +13,10 @@
 }
 
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   background: var(--black);
 }
 
@@ -22,10 +26,6 @@ main {
     height: auto;
     padding: 20px; 
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     background: var(--space);
     border-radius: 14px;
 }
@@ -100,6 +100,3 @@ input.error {
   }
 }
 
-@media screen and (max-width: 760px) {
-
-}
